# automl-pyspark

./: README.md  benchmark.ipynb  put_feat_in_s3.py  pyproject.toml  submit_functional.py
automl_iasd/: IASDAutoML.py  automl_controller_process.py  local_algorithm.py  run_pipeline.py  test_logistic_regression_process.py  test_stuff.py  transformations.py
automl_iasd/classification_algorithms/: factorization_machines.py  gradient_boosted_tree_process.py  logistic_regression_process.py  perceptron_multilayer_process.py  random_forest_process.py  support_vector_machines_process.py
automl_iasd/cloud_deployment/: init_cluster.sh
automl_iasd/data_preprocessing/: CategoricalImputer.py  cleaning.py  encode.py  scaling.py  util.py
automl_iasd/distributed/: automl_controller_process.py  automl_package.py  factorization_machines.py  gradient_boosted_tree_process.py  init_2.sh  init_cluster.sh  logistic_regression_process.py  parallelize.py  perceptron_multilayer_process.py  random_forest_process.py  support_vector_machines_process.py  test.py  test_automl_controller.py  utils.py
automl_iasd/feature_engineering/: ArithmeticTransformer.py  GroupByThenTransformer.py  selection.py  transformations.py  transformers.py  util.py
automl_iasd/feature_processing/: cleaning.py  encode.py  scaling.py  util.py
automl_iasd/hyperparameter_optimization/: tuning.py
automl_iasd/regression_algorithms/: factorization_machines_regression.py  (+3 more)
demos/: airlines_classification.ipynb  benchmark.ipynb
tests/: test_automl_iasd.py  test_preprocessing.py
tools/: build_dataset_structure.py
(+33 files in other folders)
