[tool.poetry]
name = "automl-iasd"
version = "0.1.0"
description = "A distributed AutoML framework"
authors = ["Alban Tiacoh <alban.kdf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.10"
pyspark = "^3.1.2"
hyperopt = "^0.2.5"
bayesian-optimization = "^1.2.0"
click = "^8.0.3"
boto3 = "^1.19.2"
sagemaker = "^2.65.0"
matplotlib = "^3.4.3"
jupyter = "^1.0.0"
jupyterlab = "^3.2.1"
seaborn = "^0.11.2"
mlflow = "^1.21.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
chispa = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
